<resources>
    <string name="app_name">Project1-GradeTracker</string>
    <string name="log_in_heading">Sign in</string>
    <string name="username_login_page">Username</string>
    <string name="password_login_page">Password</string>
    <string name="btnLogin">Login</string>
    <string name="welcomeUser">Welcome din_djarin</string>
    <string name="MainLogInOrSignUp">Login or Create user</string>
    <string name="course1Name" />
    <string name="course2Name" />
    <string name="course3Name" />
    <string name="course4Name" />
    <string name="course1Grade" />
    <string name="course2Grade" />
    <string name="course3Grade" />
    <string name="course4Grade" />
    <string name="addAssignment">Add assignment</string>
    <string name="btnAssignment">Assignments</string>
    <string name="rbHomework">Homework</string>
    <string name="rbProject">Project</string>
    <string name="rbQuiz">Quiz</string>
    <string name="rbExam">Exam</string>
    <string name="tvtotalgrade">Overall Percentage:</string>
    <string name="overallpercent">Overall</string>
    <string name="btnDelete">Delete</string>
    <string name="editcourse">Edit Course</string>
    <string name="tvCourseGrade">tvCourseGrade</string>
    <string name="tvCourseName">tvCourseName</string>
    <string name="tvAssignmentGrade">tvAssignmentGrade</string>
    <string name="tvAssignmentName">tvAssignmentName</string>
    <string name="CreatedBy">By Blessing Apkarian, \nHamza Saleem, \nKailun Yang</string>
</resources>