<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8fc4bc"
    tools:context=".CreateAssignmentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="59dp"
        android:background="#68b2be"
        android:gravity="center"
        android:text="Add Assignment"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#CFB0B0"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="488dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:background="#68b2be"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/etATitle"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etAID"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Assignment ID"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etADue"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Due Date"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etAPoints"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Total Points"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etAGrade"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Points Earned"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewC"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Category: "
            android:textSize="22dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/rbHomework"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/rbProject"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/rbQuiz"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/rbExam"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btAddAssignment"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="#F8a25D"
        android:text="Add Assignment"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.257" />


</androidx.constraintlayout.widget.ConstraintLayout>